@@ -24,93 +24,22 @@
  */
 package org.spongepowered.common.util;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.Lists;
-import net.minecraft.core.MappedRegistry;
-import net.minecraft.nbt.CompoundTag;
-import net.minecraft.nbt.ListTag;
+import net.minecraft.core.component.DataComponents;
 import net.minecraft.world.entity.projectile.FireworkRocketEntity;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Items;
-import org.checkerframework.checker.nullness.qual.Nullable;
-import org.spongepowered.api.Sponge;
+import net.minecraft.world.item.component.FireworkExplosion;
+import net.minecraft.world.item.component.Fireworks;
 import org.spongepowered.api.item.FireworkEffect;
-import org.spongepowered.api.item.FireworkShape;
 import org.spongepowered.api.item.ItemTypes;
-import org.spongepowered.api.registry.RegistryTypes;
-import org.spongepowered.api.util.Color;
 import org.spongepowered.common.accessor.world.entity.projectile.FireworkRocketEntityAccessor;
-import org.spongepowered.common.item.SpongeFireworkEffectBuilder;
 import org.spongepowered.common.item.SpongeItemStack;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 public final class FireworkUtil {
-
-    public static @Nullable FireworkEffect getStarEffect(final ItemStack item) {
-        Preconditions.checkArgument(item.getItem() == Items.FIREWORK_STAR, "Item is not a firework star!");
-        final @Nullable CompoundTag tag = item.getTagElement(Constants.Entity.Firework.EXPLOSION);
-        if (tag == null) {
-            return null;
-        }
-        return FireworkUtil.fromCompound(tag);
-    }
-
-    public static FireworkEffect fromCompound(final CompoundTag compound) {
-        final FireworkEffect.Builder builder = new SpongeFireworkEffectBuilder();
-        if (compound.contains(Constants.Item.Fireworks.FLICKER)) {
-            builder.flicker(compound.getBoolean(Constants.Item.Fireworks.FLICKER));
-        }
-        if (compound.contains(Constants.Item.Fireworks.TRAIL)) {
-            builder.trail(compound.getBoolean(Constants.Item.Fireworks.TRAIL));
-        }
-        if (compound.contains(Constants.Item.Fireworks.SHAPE_TYPE)) {
-            final byte type = compound.getByte(Constants.Item.Fireworks.SHAPE_TYPE);
-            final MappedRegistry<FireworkShape> registry = (MappedRegistry<FireworkShape>) (Object) Sponge.game().registry(RegistryTypes.FIREWORK_SHAPE);
-            final @Nullable FireworkShape shape = registry.byId(type);
-            if (shape != null) {
-                builder.shape(shape);
-            }
-        }
-        if (compound.contains(Constants.Item.Fireworks.COLORS)) {
-            final List<Color> colors = Lists.newArrayList();
-            final int[] colorsRaw = compound.getIntArray(Constants.Item.Fireworks.COLORS);
-            for (final int color : colorsRaw) {
-                colors.add(Color.ofRgb(color));
-            }
-            builder.colors(colors);
-        }
-        if (compound.contains(Constants.Item.Fireworks.FADE_COLORS)) {
-            final List<Color> fades = Lists.newArrayList();
-            final int[] fadesRaw = compound.getIntArray(Constants.Item.Fireworks.FADE_COLORS);
-            for (final int fade : fadesRaw) {
-                fades.add(Color.ofRgb(fade));
-            }
-            builder.fades(fades);
-        }
-
-        return builder.build();
-    }
-
-    public static CompoundTag toCompound(final FireworkEffect effect) {
-        final MappedRegistry<FireworkShape> registry = (MappedRegistry<FireworkShape>) (Object) Sponge.game().registry(RegistryTypes.FIREWORK_SHAPE);
-
-        final CompoundTag tag = new CompoundTag();
-        tag.putBoolean(Constants.Item.Fireworks.FLICKER, effect.flickers());
-        tag.putBoolean(Constants.Item.Fireworks.TRAIL, effect.hasTrail());
-        tag.putByte(Constants.Item.Fireworks.SHAPE_TYPE, (byte) registry.getId(effect.shape()));
-        final int[] colorsArray = effect.colors().stream()
-                .mapToInt(Color::rgb)
-                .toArray();
-        tag.putIntArray(Constants.Item.Fireworks.COLORS, colorsArray);
-        final int[] fadeArray = effect.fadeColors().stream()
-                .mapToInt(Color::rgb)
-                .toArray();
-        tag.putIntArray(Constants.Item.Fireworks.FADE_COLORS, fadeArray);
-        return tag;
-    }
 
     public static boolean setFireworkEffects(final Object object, final List<? extends FireworkEffect> effects) {
         if (effects.isEmpty()) {
@@ -122,13 +51,11 @@ public final class FireworkUtil {
         }
 
         if (item.getItem() == Items.FIREWORK_STAR) {
-            item.addTagElement(Constants.Entity.Firework.EXPLOSION, FireworkUtil.toCompound(effects.get(0)));
+            item.set(DataComponents.FIREWORK_EXPLOSION, (FireworkExplosion) (Object) effects.get(0));
             return true;
         } else if (item.getItem() == Items.FIREWORK_ROCKET) {
-            final CompoundTag fireworks = item.getOrCreateTagElement(Constants.Item.Fireworks.FIREWORKS);
-            fireworks.put(Constants.Item.Fireworks.EXPLOSIONS, effects.stream()
-                    .map(FireworkUtil::toCompound)
-                    .collect(NBTCollectors.toTagList()));
+            final List<FireworkExplosion> mcEffects = effects.stream().map(FireworkExplosion.class::cast).toList();
+            item.update(DataComponents.FIREWORKS, new Fireworks(1, Collections.emptyList()), p -> new Fireworks(p.flightDuration(), mcEffects));
             return true;
         }
         return false;
@@ -140,26 +67,20 @@ public final class FireworkUtil {
             return Optional.empty();
         }
 
-        final List<FireworkEffect> effects;
         if (item.getItem() == Items.FIREWORK_ROCKET) {
-            final @Nullable CompoundTag fireworks = item.getTagElement(Constants.Item.Fireworks.FIREWORKS);
-            if (fireworks == null || !fireworks.contains(Constants.Item.Fireworks.EXPLOSIONS)) {
+            final Fireworks fireworks = item.get(DataComponents.FIREWORKS);
+            if (fireworks == null || fireworks.explosions().isEmpty()) {
                 return Optional.empty();
             }
-
-            final ListTag effectCompounds = fireworks.getList(Constants.Item.Fireworks.EXPLOSIONS, Constants.NBT.TAG_COMPOUND);
-            effects = NBTStreams.toCompounds(effectCompounds)
-                    .map(FireworkUtil::fromCompound)
-                    .collect(Collectors.toList());
-        } else {
-            final @Nullable FireworkEffect effect = FireworkUtil.getStarEffect(item);
-            if (effect == null) {
-                return Optional.empty();
-            }
-            effects = ImmutableList.of(effect);
+            return Optional.of(fireworks.explosions().stream().map(FireworkEffect.class::cast).toList());
         }
 
-        return Optional.of(effects);
+        Preconditions.checkArgument(item.getItem() == Items.FIREWORK_STAR, "Item is not a firework star!");
+        final FireworkExplosion fireworkExplosion = item.get(DataComponents.FIREWORK_EXPLOSION);
+        if (fireworkExplosion == null) {
+            return Optional.empty();
+        }
+        return Optional.of(List.of((FireworkEffect) (Object) fireworkExplosion));
     }
 
     public static boolean removeFireworkEffects(final Object object) {
@@ -169,15 +90,14 @@ public final class FireworkUtil {
         }
 
         if (item.getItem() == Items.FIREWORK_STAR) {
-            final @Nullable CompoundTag tag = item.getTag();
-            if (tag == null) {
-                return true;
-            }
-            tag.remove(Constants.Entity.Firework.EXPLOSION);
+            item.remove(DataComponents.FIREWORK_EXPLOSION);
             return true;
-        } else if (item.getItem() == Items.FIREWORK_ROCKET) {
-            final CompoundTag fireworks = item.getOrCreateTagElement(Constants.Item.Fireworks.FIREWORKS);
-            fireworks.remove(Constants.Item.Fireworks.EXPLOSIONS);
+        }
+        if (item.getItem() == Items.FIREWORK_ROCKET) {
+            if (item.has(DataComponents.FIREWORKS)) {
+                // keep flight duration
+                item.update(DataComponents.FIREWORKS, null, p -> new Fireworks(p.flightDuration(), Collections.emptyList()));
+            }
             return true;
         }
         return false;
